e2e/tests/all/snapshots/splitter-min-size_rest_desktop.snap
---
source: e2e/src/suite.rs
description: splitter-min-size at desktop (rest)
expression: tree
---
button "Raise"
  StaticText "Raise"
paragraph
  StaticText "Pane A"
separator "Resize panes" = 50 [orientation=vertical] [valuemax=90] [valuemin=10]
paragraph
  StaticText "Pane B"
--> aria-controls [id="lsx-N"] (rendered above)
