e2e/tests/all/snapshots/splitter-min-size_rest_mobile.snap
---
source: e2e/src/suite.rs
description: splitter-min-size at mobile (rest)
expression: tree
---
button "Raise"
  StaticText "Raise"
paragraph
  StaticText "Pane A"
separator "Resize panes" = 50 [valuemax=90] [valuemin=10]
paragraph
  StaticText "Pane B"
--> aria-controls [id="lsx-N"] (rendered above)
