e2e/tests/all/snapshots/splitter-rtl_rest_desktop.snap
---
source: e2e/src/suite.rs
description: splitter-rtl at desktop (rest)
expression: tree
---
button "Before"
  StaticText "Before"
paragraph
  StaticText "Pane A"
separator "Resize panes" = 50 [valuemax=90] [valuemin=10]
paragraph
  StaticText "Pane B"
--> aria-controls [id="lsx-N"] (rendered above)
