e2e/tests/all/snapshots/splitter_rest_desktop.snap
---
source: e2e/src/suite.rs
description: splitter at desktop (rest)
expression: tree
---
button "Before"
  StaticText "Before"
paragraph
  StaticText "Pane A"
separator "Resize panes" = 50 [orientation=vertical] [valuemax=90] [valuemin=10]
paragraph
  StaticText "Pane B"
button "After"
  StaticText "After"
--> aria-controls [id="lsx-N"] (rendered above)
